--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -12,15 +12,30 @@
     <span class="cinema-name" data-tooltip="Cinema Name 8">Cinema Name 8</span>
   </div> -->
 
-  <button class="btn btn-new">تذكرة جديدة</button>
-<table datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger" class="matable">
+  <!-- <button class="btn btn-new">تذكرة جديدة</button> -->
+  <div class="row p-0 m-0">
+    <div class="col-md-3">
+      <button class="bn54">
+        <span class="bn54span">حجز تذكرة جديدة</span>
+      </button>
+    </div>
+      <div class="col-md-3" >
+        <label for="">{{activeText}}</label>
+        <label class="switch">
+          <input type="checkbox" (change)="activtety()">
+          <span class="slider round"></span>
+        </label>
+      </div>
+
+  </div>
+  <table datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger" class="matable">
     <thead>
       <tr>
         <th scope="col">التذكرة</th>
         <th scope="col">عدد مرات الشراء</th>
         <th scope="col">عدد الاشخاص</th>
         <th scope="col">السينمات</th>
-        <th scope="col">قيمى التذكرة  <!--<i class="bi bi-arrow-down-up"></i> --></th>
+        <th scope="col">قيمى التذكرة <!--<i class="bi bi-arrow-down-up"></i> --></th>
         <th scope="col">رقم التذكرة</th>
         <th scope="col">المستخدم</th>
         <th scope="col">#</th>
@@ -28,32 +43,28 @@
     </thead>
     <tbody>
       @for (ticket of ticketss.data; track $index) {
-        <tr>
-          <td><a href=""><i class="bi bi-file-arrow-down"></i> تذكرة رقم {{ticket.ticketId}}</a></td>
-          <td>1</td>
-          <td>{{ticket.adultCount+ticket.childCount}}</td>
-          <!-- <td><span data-tooltip="hellow">{{place}}</span></td> -->
-          <td class="cinema-name" [attr.data-tooltip]="place">{{place}}</td>
-          <td>{{ticket.finalAmount}}</td>
-          <td>{{ticket.ticketNo}}</td>
-          <td>
-            <div class="row m-0">
-              <div class="col-md-9">
-                <p class="m-0">{{ticket.customerName}}</p>
-                <small class="fw-lighter">{{ticket.mobileNo}}</small>
-              </div>
-              <div class="col-md-3 p-0">
-                <img class="rounded-circle" width="45" height="45"
-                [src]="img" alt="a">
-              </div>
+      <tr>
+        <td><a href=""><i class="bi bi-file-arrow-down"></i> تذكرة رقم {{ticket.ticketId}}</a></td>
+        <td>1</td>
+        <td>{{ticket.adultCount+ticket.childCount}}</td>
+        <!-- <td><span data-tooltip="hellow">{{place}}</span></td> -->
+        <td class="cinema-name" [attr.data-tooltip]="place">{{place}}</td>
+        <td>{{ticket.finalAmount}}</td>
+        <td>{{ticket.ticketNo}}</td>
+        <td>
+          <div class="row m-0">
+            <div class="col-md-9">
+              <p class="m-0">{{ticket.customerName}}</p>
+              <small class="fw-lighter">{{ticket.mobileNo}}</small>
             </div>
-          </td>
-          <th scope="row">{{$index}}</th>
-        </tr>
+            <div class="col-md-3 p-0">
+              <img class="rounded-circle" width="45" height="45" [src]="img" alt="a">
+            </div>
+          </div>
+        </td>
+        <th scope="row">{{$index}}</th>
+      </tr>
       }
     </tbody>
   </table>
 </div>
-
-
-  
