--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="containet-fluid bg-body-tertiary">
-  <div class="row justify-content-between mx-4 px-4">
+  <div class="row justify-content-between mx-4 p-2">
     <div class="col-md-5 p-0"><button class="btn btn-outline-dark bi-pencil">تعديل</button></div>
     <div class="col-md-2 px-2 text-end p-0">تذكرة رقم <button class="btn btn-outline-dark bi-arrow-right"></button></div>
   </div>
