--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -16,14 +16,14 @@
   <table datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger" class="matable">
     <thead>
       <tr>
-        <th scope="col" style="text-align: end;">التذكرة</th>
-        <th scope="col" style="text-align: end;">عدد مرات الشراء</th>
-        <th scope="col" style="text-align: end;">عدد الاشخاص</th>
-        <th scope="col" style="text-align: end;">السينمات</th>
-        <th scope="col" style="text-align: end;">قيمى التذكرة <!--<i class="bi bi-arrow-down-up"></i> --></th>
-        <th scope="col" style="text-align: end;">رقم التذكرة</th>
-        <th scope="col" style="text-align: end;">المستخدم</th>
-        <th scope="col" style="text-align: end;">#</th>
+        <th scope="col" class="text-end">التذكرة</th>
+        <th scope="col" class="text-end">عدد مرات الشراء</th>
+        <th scope="col" class="text-end">عدد الاشخاص</th>
+        <th scope="col" class="text-end">السينمات</th>
+        <th scope="col" class="text-end">قيمى التذكرة <!--<i class="bi bi-arrow-down-up"></i> --></th>
+        <th scope="col" class="text-end">رقم التذكرة</th>
+        <th scope="col" class="text-end">المستخدم</th>
+        <th scope="col" class="text-end">#</th>
       </tr>
     </thead>
     <tbody>
